first run with overview layout

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,11 @@
 <resources>
 
     <string name="app_name">Elais</string>
-
+	
+    
+    <!-- overview screen -->
+    <string name="overview_litres">LITRES</string>
+    <string name="overview_slashMark">/</string>
+    <string name="overview_searchStations">SEARCH</string>
+    <string name="overview_showHistory">HISTORY</string>
 </resources>
